[cpp-app] moved hello to project_name directory

--- a/cpp-app/src/project_name/CMakeLists.txt
+++ b/cpp-app/src/project_name/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_executable(
   ${CMAKE_PROJECT_NAME}
-  main.cpp)
+  main.cpp
+  hello.cpp
+)
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE lib1 lib2 glfw)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE lib1 glfw)
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Werror -Wall -Wextra -pedantic-errors -Wconversion -Wsign-conversion)
 
