--- a/cpp-app/src/project_name/CMakeLists.txt
+++ b/cpp-app/src/project_name/CMakeLists.txt
@@ -1,3 +1,4 @@
+# Main executable
 add_executable(
   ${CMAKE_PROJECT_NAME}
   main.cpp
@@ -6,4 +7,14 @@ add_executable(
 
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE lib1 glfw)
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Werror -Wall -Wextra -pedantic-errors -Wconversion -Wsign-conversion)
+
+# Library used for unit tests
+add_library(
+  ${CMAKE_PROJECT_NAME}_lib
+  main.cpp
+  hello.cpp
+)
+
+target_include_directories(${CMAKE_PROJECT_NAME}_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(${CMAKE_PROJECT_NAME}_lib PRIVATE lib1 glfw)
 
