[python] new targets on Makefile

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,3 +1,13 @@
 .PHONY: test
 test:
 		pytest --cov -v
+
+.PHONY: dev
+dev:
+		pip install -e .
+
+.PHONY: requirements
+requirements:
+		pip install -r requirements.txt
+		pip install -r requirements-tests.txt
+
